# Changelog

## `v0.3.1` — [2025-09-29]

- changed toc_depth for changelog docs
- adding backticks to changelog sections
- added custom toc-depth option
- Update README.md
- changed 'what's new' to 'release notes'

## `v0.3.0` — [2025-09-28]

- renamed cli command 'bump' to 'next'
- introduced cli 'version' command
- added click as cli driver
- implemented changelog generation
- implemented proper "dry-running"
- fleshed out docs
- fixed default flag handling in cli
- package housekeeping:
    - updates dependencies and relaxed requirements
    - added license
    - started addings tests
    - gitignore, resources, ansi-codes, etc

## `v0.2.0` — [2025-09-23]

- [main] set to be the new base branch
- official initialization of the project

## `pre v0.2` — [2025-09-22/23]

- initial construction phase (squashed)
- releases have been yanked on PyPI