@@ -32,5 +32,5 @@ required-version = ">=0.7.0"
 default-groups = ["dev", "docs"]
 
 [tool.uv-ship]
-release-branch = "dev"
+release-branch = "main"
 allow-dirty = false
